src/blocks/introWithVideo/index.scss
.intro {
  align-items: center;
  background: var(--darker-violet);
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding-top: 50px;
}

.intro__grid {
  display: grid;
  grid-template-areas: "text video" "note video" "integrations video" "download video";
  grid-template-columns: auto auto;
  grid-template-rows: repeat(4, min-content);
}

.intro__integrations {
  align-items: center;
  color: var(--light-violet);
  display: flex;
  font-size: 19px;
  grid-area: integrations;
  margin-top: 64px;

  > * {
    margin-right: 10px;
  }

  b {
    align-items: center;
    display: inline-flex;
    color: var(--primary-white);

    svg {
      margin-right: 5px;
      height: auto;
      width: auto;
    }

    + b {
      margin-left: 5px;
    }
  }
}

.intro__integrations__more {
  color: var(--light-violet);
}

.intro__text {
  font-size: 46px;
  grid-area: text;
  line-height: 1.5;
}

.intro__download {
  grid-area: download;
  margin-top: 30px;
  display: flex;
  > a:not(:last-of-type) {
    margin-right: 12px;
  }
}

.intro__video {
  grid-area: video;
  position: relative;
  min-height: 300px;
  width: 630px;
}

.intro__video > img {
  width: 100%;
  height: auto;
}

.intro__video .video__wrapper {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.intro__video .button__play {
  --height: 60px;
  height: var(--height);
  position: absolute;
  top: calc(50% - 20px);
  left: calc(50% - 90px);
  background-color: var(--primary-violet);
  border-color: var(--primary-violet);
  border-radius: calc(var(--height) / 2);
  animation-name: play-button-pulse;
  animation-duration: 2.75s;
  animation-iteration-count: infinite;
  svg {
    pointer-events: none;
  }
}

@keyframes play-button-pulse
{
  0% {
    transform: scale(1);
    box-shadow: 0 0 0 0px rgba(156,100,255, 0.5), 0 0 0px rgba(156,100,255, 0.75);
  }
  50% {
    transform: scale(1.1);
    box-shadow: 0 0 0 25px rgba(156,100,255, 0), 0 0 0 12.5px rgba(156,100,255, 0);
  }
  10% {
    transform: scale(1);
    box-shadow: 0 0 0 0px rgba(156,100,255, 0.5), 0 0 0px rgba(156,100,255, 0.75);
  }
}

.intro__note {
  color: #EBEBEB;
  font-size: 18px;
  grid-area: note;
  margin-top: 20px;
  line-height: 1.5;
  b {
    font-weight: 700;
  }
}

.scroll__down {
  --color: #EBEBEB;
  position: relative;
  top: 100px;
  display: flex;
  flex-direction: column;
  align-items: center;
  font-size: 14px;
  color: var(--color);
  opacity: 0.5;
  cursor: pointer;
  transition: 0.3s ease;
  
  &:hover {
    --color: var(--primary-orange);
    opacity: 1;
  }
}

.scroll__down svg {
  width: 57px;
  height: 25px;
  margin-bottom: 20px;
}

.scroll__down svg path {
  fill: var(--color); 
  transition: 0.3s ease;
}

@media (max-width: 1440px) {

  .intro {
    padding-top: 60px;
  }

  .intro__text {
    font-size: 30px;
  }

  .scroll__down {
    display: none;
  }

}

@media (max-width: 1024px) {

  .intro {
    padding-top: 100px;
    justify-content: initial;
  }

  .intro__grid {
    display: grid;
    grid-template-areas: "text" "video" "integrations" "download" "note";
    // grid-template-areas: "text" "integrations" "download" "note" "picture";
    grid-template-columns: auto;
    grid-auto-rows: min-content;
    margin-top: 60px;
    margin-bottom: auto;
  }

  .intro__video {
    margin: 0 auto;
  }

  .intro__text {
    font-size: 36px;
    text-align: center;
  }

  .intro__integrations {
    margin-top: 32px;
    flex-wrap: wrap;
    justify-content: center;
    font-size: 16px;
    line-height: 2;
  }

  .intro__download {
    a {
      // width: 100%;
      margin-left: auto;
      margin-right: auto;
      padding: 16px 24px;
      font-size: 14px;
    }
  }

  .howItWorks__controls-images img:nth-of-type(3){
    display: none;
  }

  .intro__note {
    text-align: center;
  }
}

@media (max-width: 768px) {
  .howItWorks__controls-images img:nth-of-type(3){
    display: initial;
  }
}

@media (max-width: 767px) {
  .intro__video{
    max-width: 310px;
    min-height: unset;
    .button__play {
      --height: 40px;
      padding: 16px 24px;
    }
  }
  .intro__grid {
    margin-top: 20px;
  }
  .intro__text {
    font-size: 26px;
  }
  .intro__note {
    font-size: 14px;
  }
  .intro__download {
    margin-top: 24px;
  }
}

@media (max-width: 320px) {
  .intro__video{
    max-width: 270px;
    min-height: unset;
    .button__play {
      --height: 40px;
      padding: 8px 16px;
      font-size: 12px;
      top: calc(50% - (var(--height) / 2) + 10px);
      left: calc(50% - 70px)
    }
  }
}

